[gd_scene load_steps=15 format=3 uid="uid://b6dph58aj4tme"]

[ext_resource type="Script" path="res://player/player.gd" id="1_ni3np"]
[ext_resource type="Script" path="res://player/left eye node.gd" id="2_bfumu"]
[ext_resource type="Script" path="res://player/right eye node.gd" id="3_g7m5p"]
[ext_resource type="AudioStream" uid="uid://droywo0qiri6i" path="res://audio/dash.wav" id="4_dmqpf"]

[sub_resource type="Curve" id="Curve_3g2ry"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.494506, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), -0.0491227, 0.0, 0, 0]
point_count = 3

[sub_resource type="Gradient" id="Gradient_748se"]
colors = PackedColorArray(0, 0.827451, 1, 0.392157, 1, 1, 1, 0.501961)

[sub_resource type="Gradient" id="Gradient_ovceo"]
colors = PackedColorArray(0, 1, 1, 0.694118, 1, 1, 1, 0.247059)

[sub_resource type="Gradient" id="Gradient_irh04"]
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="CircleShape2D" id="CircleShape2D_k4hsi"]
radius = 22.0227

[sub_resource type="CircleShape2D" id="CircleShape2D_xt0ek"]
radius = 700.0

[sub_resource type="CircleShape2D" id="CircleShape2D_lc2ci"]
radius = 35.0

[sub_resource type="Curve" id="Curve_w7nxf"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Gradient" id="Gradient_ixodm"]
colors = PackedColorArray(0, 0.827451, 1, 0.392157, 1, 1, 1, 0.392157)

[sub_resource type="Curve" id="Curve_x7da7"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[node name="player" type="CharacterBody2D"]
collision_layer = 3
collision_mask = 3
script = ExtResource("1_ni3np")

[node name="body" type="CPUParticles2D" parent="."]
position = Vector2(0, 10)
amount = 250
lifetime = 0.5
speed_scale = 0.7
explosiveness = 0.1
randomness = 0.1
lifetime_randomness = 0.1
emission_shape = 1
emission_sphere_radius = 25.0
spread = 180.0
gravity = Vector2(0, -1000)
radial_accel_min = 100.0
radial_accel_max = 100.0
angle_min = -180.0
angle_max = 180.0
scale_amount_min = 20.0
scale_amount_max = 20.0
scale_amount_curve = SubResource("Curve_3g2ry")
color_ramp = SubResource("Gradient_748se")
color_initial_ramp = SubResource("Gradient_ovceo")

[node name="left eye node" type="Node2D" parent="."]
position = Vector2(8, 6)
script = ExtResource("2_bfumu")

[node name="left eye" type="CPUParticles2D" parent="left eye node"]
amount = 50
lifetime = 0.2
speed_scale = 0.5
emission_shape = 1
emission_sphere_radius = 1.0
gravity = Vector2(0, -1000)
angle_min = -20.0
angle_max = 20.0
scale_amount_min = 3.0
scale_amount_max = 3.0
color_ramp = SubResource("Gradient_irh04")

[node name="right eye node" type="Node2D" parent="."]
position = Vector2(-8, 6)
script = ExtResource("3_g7m5p")

[node name="right eye" type="CPUParticles2D" parent="right eye node"]
amount = 50
lifetime = 0.2
speed_scale = 0.5
emission_shape = 1
emission_sphere_radius = 1.0
gravity = Vector2(0, -1000)
angle_min = -20.0
angle_max = 20.0
scale_amount_min = 3.0
scale_amount_max = 3.0
color_ramp = SubResource("Gradient_irh04")

[node name="combat eye" type="CPUParticles2D" parent="."]
position = Vector2(-1, 20)
emitting = false
amount = 150
lifetime = 0.5
local_coords = true
direction = Vector2(0, 0)
spread = 0.0
gravity = Vector2(0, 0)
initial_velocity_min = 250.0
initial_velocity_max = 250.0
orbit_velocity_min = 2.0
orbit_velocity_max = 2.0
angle_min = -20.0
angle_max = 20.0
scale_amount_min = 3.0
scale_amount_max = 3.0

[node name="hurtbox" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_k4hsi")

[node name="GunTimer" type="Timer" parent="."]
wait_time = 0.9

[node name="DashLength" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="DashParticles" type="Timer" parent="."]
wait_time = 0.3

[node name="I_FramesLength" type="Timer" parent="."]

[node name="DashI_FramesLength" type="Timer" parent="."]
wait_time = 0.3

[node name="ParryTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="combat_eye_detection" type="Area2D" parent="."]
position = Vector2(0, 22)

[node name="CollisionShape2D" type="CollisionShape2D" parent="combat_eye_detection"]
visible = false
position = Vector2(0, -18)
shape = SubResource("CircleShape2D_xt0ek")

[node name="parry_detection" type="Area2D" parent="."]
position = Vector2(0, 25)

[node name="CollisionShape2D" type="CollisionShape2D" parent="parry_detection"]
visible = false
position = Vector2(0, -22)
shape = SubResource("CircleShape2D_lc2ci")
disabled = true

[node name="dashsfx" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_dmqpf")
volume_db = -5.0

[node name="top" type="CPUParticles2D" parent="."]
visible = false
amount = 50
lifetime = 0.3
emission_shape = 1
emission_sphere_radius = 5.0
direction = Vector2(0, -1)
spread = 0.0
gravity = Vector2(0, 0)
initial_velocity_min = 200.0
initial_velocity_max = 200.0
angular_velocity_min = -180.0
angular_velocity_max = 180.0
radial_accel_min = -100.0
radial_accel_max = -100.0
angle_min = -180.0
angle_max = 180.0
scale_amount_min = 20.0
scale_amount_max = 20.0
scale_amount_curve = SubResource("Curve_w7nxf")
color_ramp = SubResource("Gradient_ixodm")

[node name="right" type="CPUParticles2D" parent="."]
visible = false
amount = 50
lifetime = 0.3
emission_shape = 1
emission_sphere_radius = 5.0
spread = 0.0
gravity = Vector2(0, 0)
initial_velocity_min = 200.0
initial_velocity_max = 200.0
angular_velocity_min = -180.0
angular_velocity_max = 180.0
radial_accel_min = -100.0
radial_accel_max = -100.0
angle_min = -180.0
angle_max = 180.0
scale_amount_min = 20.0
scale_amount_max = 20.0
scale_amount_curve = SubResource("Curve_x7da7")
color_ramp = SubResource("Gradient_ixodm")

[node name="left" type="CPUParticles2D" parent="."]
visible = false
amount = 50
lifetime = 0.3
emission_shape = 1
emission_sphere_radius = 5.0
direction = Vector2(-1, 0)
spread = 0.0
gravity = Vector2(0, 0)
initial_velocity_min = 200.0
initial_velocity_max = 200.0
angular_velocity_min = -180.0
angular_velocity_max = 180.0
radial_accel_min = -100.0
radial_accel_max = -100.0
angle_min = -180.0
angle_max = 180.0
scale_amount_min = 20.0
scale_amount_max = 20.0
scale_amount_curve = SubResource("Curve_x7da7")
color_ramp = SubResource("Gradient_ixodm")

[node name="down" type="CPUParticles2D" parent="."]
visible = false
amount = 50
lifetime = 0.3
emission_shape = 1
emission_sphere_radius = 5.0
direction = Vector2(0, 1)
spread = 0.0
gravity = Vector2(0, 0)
initial_velocity_min = 200.0
initial_velocity_max = 200.0
angular_velocity_min = -180.0
angular_velocity_max = 180.0
radial_accel_min = -100.0
radial_accel_max = -100.0
angle_min = -180.0
angle_max = 180.0
scale_amount_min = 20.0
scale_amount_max = 20.0
scale_amount_curve = SubResource("Curve_x7da7")
color_ramp = SubResource("Gradient_ixodm")

[connection signal="timeout" from="GunTimer" to="." method="_on_cooldown_timer_timeout"]
[connection signal="timeout" from="DashLength" to="." method="_on_dash_length_timeout"]
[connection signal="timeout" from="DashParticles" to="." method="_on_dash_particles_timeout"]
[connection signal="timeout" from="I_FramesLength" to="." method="_on_i_frames_length_timeout"]
[connection signal="timeout" from="DashI_FramesLength" to="." method="_on_dash_i_frames_length_timeout"]
[connection signal="timeout" from="ParryTimer" to="." method="_on_parry_timer_timeout"]
[connection signal="area_entered" from="combat_eye_detection" to="." method="_on_combat_eye_detection_area_entered"]
[connection signal="area_exited" from="combat_eye_detection" to="." method="_on_combat_eye_detection_area_exited"]
[connection signal="area_entered" from="parry_detection" to="." method="_on_parry_detection_area_entered"]
